2008-02-09  Helmut Eller  <heller@common-lisp.net>

	Limit the length of the inspector content.
	That's similar to the limitation of the length of backtraces in
	the debugger.

	* swank.lisp (*inspectee-content*): New variable.
	(content-range): New function.
	(inspect-object): Use it with a length of 1000.
	(inspector-range): New function. Called from Emacs.

	* slime.el (slime-inspector-insert-content)
	(slime-inspector-insert-range, slime-inspector-insert-range-button)
	(slime-inspector-fetch-range): New functions.
	(slime-inspector-operate-on-point): Handle range-buttons.

2008-02-09  Helmut Eller  <heller@common-lisp.net>

	Make slime-property-bounds more useful.

	* slime.el (slime-property-bounds): Remove special casing for
	whitespace at the end.
	(slime-repl-send-input): Don't mark the newline with the
	slime-repl-old-input property.
	(sldb-frame-region): Use slime-property-bounds.

2008-02-09  Helmut Eller  <heller@common-lisp.net>

	Inspector cleanups.

	* swank.lisp (emacs-inspect): Renamed from inspect-for-emacs.
	Changed all method-defs acordingly.
	(common-seperated-spec, inspector-princ): Moved to
	swank-fancy-inspector.lisp.
	(inspector-content): Renamed from inspector-content-for-emacs.
	(value-part): Renamed from value-part-for-emacs.
	(action-part): Renamed from action-part-for-emacs.
	(inspect-list): Renamed from inspect-for-emacs-list.
	(inspect-list-aux): New.
	(inspect-cons): Renamed from inspect-for-emacs-simple-cons.
	(*inspect-length*): Deleted.
	(inspect-list): Ignore max-length stuff.
	(inspector-content): Don't allow nil elements.
	(emacs-inspect array): Make the label of element type more
	consistent with the others.

2008-02-09  Helmut Eller  <heller@common-lisp.net>

	Cleanup slime-repl-set-package.

	* slime.el (slime-repl-set-package): Make it fit within 80 columns.

2008-02-05  Marco Baringer  <mb@bese.it>

	* slime.el (slime-search-buffer-package): Ask the lisp to read the